# OpenAlexAPI

./: README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: lint_python.yml
diagrams/: classes.puml  components.puml
openalexapi/: __init__.py  author.py  authorship.py  basetype.py  biblio.py  concept.py  dehydrated_author.py  dehydrated_venue.py  enums.py  geo.py  ids.py  institution.py  mesh.py  openaccess.py  venue.py  work.py  year.py
tests/: test___init__.py
